# btc-tx-rust

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml  docker_postgres_init.sql  readme.md
files/: test.json
files/tx/: transactions-1.json  transactions-2.json
files/users/: users.json
migrations/: V1__initial.sql
migrations/2022-08-08-134848_create_transactions/: up.sql
src/: lib.rs  main.rs  process_transactions.rs  schema.rs
src/db/: migration.rs
src/service/: mod.rs  models.rs  schema.rs  service.rs  tx_reader.rs  tx_repository.rs
src/service/transactions/: mod.rs  models.rs  reader.rs  repository.rs  schema.rs
src/service/users/: models.rs  reader.rs  repository.rs  schema.rs
