[package]
edition = "2021"
name = "read-file"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4", features = ["postgres"]}
diesel_codegen = {version = "0.16.1", features = ["postgres"]}
dotenv = "0.15.0"

serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.142"
serde_json = "1.0.83"
